<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myGPSlogger</string>
    <string name="action_settings">Settings</string>
    <string name="hello">myGPSlogger</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>

    <string name="start">Iniciar</string>
    <string name="stop">Parar</string>
    
    <string name="service_name">GPSLoggerService</string>
    <string name="local_service_started">GPSLoggerService se está ejecutando</string>
    <string name="local_service_stopped">GPSLoggerService se ha detenido</string>
    
    <string name="Export">Exportar KML a tarjeta SD</string>
    <string name="export_completed">Exportar Completado!!!</string>
    <string name="update">Actualizar</string>
    
    <string name="pref_activity_name">Preferencias</string>
    <string name="pref_admin_category">Acceso Administrador</string>
    <string name="pref_admin_pass_active_title">Activar contraseña</string>
    <string name="pref_admin_pass_active_summary">Activa el acceso a diferentes partes del programa mediante una constraseña</string>
    <string name="pref_admin_password">Definir contraseña</string>
    <string name="pref_admin_password_summary">Definir la contraseña del administrador</string>
    
    <string name="pref_app_category">Configuración</string>
    <string name="pref_app_altitudeCorrectionMeters">Corrección Altitud</string>
    <string name="pref_app_altitudeCorrectionMeters_summary">Introduzca los metros de corrección en la altura del GPS (Para Ibiza el valor recomendado es -50)</string>
    <string name="pref_app_minTimeMillis">Tiempo mínimo</string>
    <string name="pref_app_minTimeMillis_summary">Milisegundos mínimos transcurridos entre cada log del GPS</string>
    <string name="pref_app_minDistanceMeters">Distancia mínima</string>
    <string name="pref_app_minDistanceMeters_summary">Distancia mínima (en metros) entre cada log del GPS</string>
    <string name="pref_app_minAccuracy">Precisión mínima</string>
    <string name="pref_app_minAccuracy_summary">Precisión mínima (en metros) para validar cada log del GPS</string>
    <string name="pref_app_showingDebugToast">Debug</string>
    <string name="pref_app_showingDebugToast_summary">Mostrar mensajes de Debug</string>
    
    <string name="pref_opengts_category">Configuración OpenGTS</string>
    <string name="pref_opengts_server">Servidor</string>
    <string name="pref_opengts_server_summary">Nombre del servidor y puerto de acceso. Ej: 213.96.91.211:8080</string>
    <string name="pref_opengts_gprmc">Cadena gpRmc</string>
    <string name="pref_opengts_gprmc_summary">Por ejemplo: /gprmc/Data?</string>
    <string name="pref_opengts_accountName">Cuenta</string>
    <string name="pref_opengts_accountName_summary">Nombre de cuenta en el servidor OpenGTS</string>
    <string name="pref_opengts_userID">Usuario</string>
    <string name="pref_opengts_userID_summary">Código del vehículo del usuario, Ej: t2015, leggett, etc</string>
    
    <string name="menu_preferencias_title">Preferencias</string>

</resources>